[package]
name = "map-sector-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.30"
encoding_rs_io = "0.1.7"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
